Carousel Infinite Loop, and Spacings fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
 }
 
 .logo {
-  height: 8em;
-  /* padding: 1.5em; */
+  height: 160px;
+  width: 160px;
+  align-self: middle;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -32,17 +33,65 @@
   }
 }
 
+.main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .card {
-  /* padding: 2em; */
-  height: 100%;
-  justify-content: space-between;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  /* padding: 24px 0; */
+}
+
+.social-media {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-container {
+  width: 40px;
+  height: 40px;
+  background-color: #f4f5f6;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #555;
+  text-decoration: none;
+}
+
+.icon-container:hover {
+  background-color: #646cff;
+  color: white;
+  transform: translateY(-2px);
+}
+
+.social-icon {
+  font-size: 20px;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.5em;
 }
 
 .carousel-wrapper {
-  margin-top: 24px;
-  /* max-width: 800px; */
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  margin: 0;
+  flex-shrink: 0;
+  margin: 20px 0px;
 }
 
 .countdown {
